--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <!-- Begin Jekyll SEO tag v2.7.1 -->
-    <title>Decentralized Finance</title>
+    <title>Decentralized Finance MOOC</title>
     <meta name="generator" content="Jekyll v3.9.0" />
     <meta property="og:title" content="Decentralized Finance MOOC" />
     <meta property="og:locale" content="en_US" />
