university affiliation, tagline

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 src="http://berkeley-defi.github.io/assets/UCBerkeley_wordmark_white.png">
         </p> -->
         <h1 class="project-name">Decentralized Finance</h1>
-        <!-- <h2 class="project-tagline">Spring 2021</h2> -->
+        <h2 class="project-tagline">MOOC, Fall 2021</h2>
 
     </section>
 
