--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,20 +9,20 @@
     <meta name="generator" content="Jekyll v3.9.0" />
     <meta property="og:title" content="Decentralized Finance MOOC" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="Spring 2021" />
-    <meta property="og:description" content="Spring 2021" />
+    <meta name="description" content="Decentralized Finance MOOC" />
+    <meta property="og:description" content="Decentralized Finance MOOC" />
     <link rel="canonical" href="https://defi-learning.github.io/" />
     <meta property="og:url" content="https://defi-learning.github.io/" />
     <meta property="og:site_name" content="Decentralized Finance MOOC" />
 
-    <!-- <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="PHDBA 297T.4 Decentralized Finance Spring 2021" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Decentralized Finance MOOC" />
     <meta name="twitter:description"
-        content="The purpose of this class is to bring together students and experts in Computer Science and Finance to discuss the emerging area of Decentralized Finance (or DeFi). By utilizing blockchain and smart contract technologies, DeFi aims to provide a new platform for programmable, automated finance services that remove the reliance on central trust and intermediaries. With its rapid growth, the total value locked in decentralized finance — a measure of the total value of assets committed to the DeFi ecosystem —has reached over $40 billion." />
-    <meta name="twitter:image" content="http://berkeley-defi.github.io/assets/twitter_card.jpg" /> -->
+        content="The purpose of this class is to bring together students and interdisciplinary experts in Computer Science and Finance to discuss the emerging area of Decentralized Finance (or DeFi). DeFi has experienced an unprecedented growth, with hundreds of projects and a countless stream of financial, distributed systems, and blockchain innovations. " />
+    <meta name="twitter:image" content="http://berkeley-defi.github.io/assets/twitter_card.jpg" />
 
     <script type="application/ld+json">
-{"@type":"WebSite","headline":"PDecentralized Finance MOOC","url":"https://defi-learning.github.io/","name":"Decentralized Finance MOOC","@context":"https://schema.org"}</script>
+{"@type":"WebSite","headline":"Decentralized Finance MOOC","url":"https://defi-learning.github.io/","name":"Decentralized Finance MOOC","@context":"https://schema.org"}</script>
     <!-- End Jekyll SEO tag -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
