fixed twitter card

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <meta name="twitter:title" content="Decentralized Finance MOOC" />
     <meta name="twitter:description"
         content="The purpose of this class is to bring together students and interdisciplinary experts in Computer Science and Finance to discuss the emerging area of Decentralized Finance (or DeFi). DeFi has experienced an unprecedented growth, with hundreds of projects and a countless stream of financial, distributed systems, and blockchain innovations. " />
-    <meta name="twitter:image" content="http://berkeley-defi.github.io/assets/twitter_card.jpg" />
+    <meta name="twitter:image" content="http://defi-learning.github.io/assets/twitter_card.jpg" />
 
     <script type="application/ld+json">
 {"@type":"WebSite","headline":"Decentralized Finance MOOC","url":"https://defi-learning.github.io/","name":"Decentralized Finance MOOC","@context":"https://schema.org"}</script>
