split site into f21 and f22

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link rel="canonical" href="https://defi-learning.github.io/" />
     <meta property="og:url" content="https://defi-learning.github.io/" />
     <meta property="og:site_name" content="Decentralized Finance MOOC" />
+    <meta http-equiv="refresh" content="0;url=/f22" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Decentralized Finance MOOC" />
@@ -38,7 +39,6 @@
                 src="http://berkeley-defi.github.io/assets/UCBerkeley_wordmark_white.png">
         </p> -->
         <h1 class="project-name">Decentralized Finance</h1>
-        <h2 class="project-tagline">MOOC, Fall 2021</h2>
 
     </section>
 
